--- a/.env
+++ b/.env
@@ -1,17 +1,24 @@
-# Альтернативный путь для хранения базы данных. При отсутствии этой переменной берётся по-умолчанию,
-# указанный в папке 'config/server_conf.go', 'DbDefaultPath = "internal/storage_db/scheduler.db"'
-TODO_DBFILE=internal/storage_db/scheduler.db
-# Путь для тестов, назначается отдельно от основного для программы, должен совпадать с основным, 
-# но иметь свой выход на расположение базы данных.
-TODO_DBFILE_TEST=../storage_db/scheduler.db
-# Альтернативный порт для запуска сервера. При отсутствии этой переменной берётся по-умолчанию,
-# указанный в папке 'config/server_conf.go', 'DefaultPort = "7540"'.
-TODO_PORT=7540
-# Пароль для авторизации на странице '/login.html', при наличии этой переменной доступ к планировщику
-# будет закрыт и требовать ввод пароля. Можно изменить и получать доступ к планировщику через свой пароль.
-TODO_PASSWORD=qwerty
-# Используется только для тестов. Хэш-сумма пароля для тестирования авторизации, при изменении переменной 'TODO_PASSWORD'
-# необходимо изменить значение хэш-суммы для своего пароля. Новый хэш можно получить на сайте "https://bcrypt-generator.com".
-# Для хранения в ".env" используется экранирование символов, иначе будет прочитан не весь хэш и будет ошибка тестов.
-# Если после '$' идет цифра, то необходимо сделать экранирование.
-EXTERNAL_API_URL=http://localhost:8080/info
+# Общие параметры и значения:
+# Адрес сервера.
+ADDRESS=0.0.0.0:7654
+# Уровень логирования.
+LOG_LEVEL=info
+# Путь до папки с миграциями.
+MIGRATION_PATH=file://db/migration
+# Адрес до внешнего API.
+EXTERNAL_API_URL=http://localhost:7777/info
+# Размер пагинации.
+PAGINATION_LIMIT=10
+# Параметры для значений датабазы:
+# Пользователь.
+DB_USER=postgres
+# Пароль.
+DB_PASSWORD=admin
+# Адрес.
+DB_HOST=0.0.0.0
+# Порт.
+DB_PORT=5432
+# Имя.
+DB_NAME=library
+# Драйвер.
+DB_DRIVER=pgx
