--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 # Адрес сервера.
 ADDRESS=0.0.0.0:7654
 # Уровень логирования.
-LOG_LEVEL=info
+LOG_LEVEL=debug
 # Путь до папки с миграциями.
 MIGRATION_PATH=file://db/migration
 # Адрес до внешнего API.
